--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width">
-    <title>Ресторан</title>
+    <title>Ресторан!!!!!!</title>
 </head>
 <body>
             <div class="header">
