--- a/index.html
+++ b/index.html
@@ -180,6 +180,47 @@
                                     </div>
                                     </div>
                         </div>
+
+
+
+                            <div class="food">
+
+                                <div class="container"> 
+                                
+                                        <div class="food-title">
+                                            Наши <span>Блюда</span>
+                                        </div>
+                                        <div class="burgers">
+                                           <div class="burgers-image">
+                                            <img src="images/pizza.png" class="pizza" alt="">
+                                           </div>         
+
+                                                <div class="burgers-items">
+
+                                                    <div class="burger-item">
+                                                        <img src="images/hamg.png" alt="" class="burger-1">
+                                                        <div class="burger-text">
+                                                            Гамбургер мини ----------------------------- 220 ₽
+                                                        </div>
+                                                    </div>
+                                                    <div class="burger-item">
+                                                        <img src="images/hamg.png" alt="" class="burger-2">
+                                                        <div class="burger-text">
+                                                            Гамбургер мини -----------------------------  220 ₽
+                                                        </div>
+                                                    </div>
+                                                    <div class="burger-item">
+                                                        <img src="images/hamg.png" alt="" class="burger-3">
+                                                        <div class="burger-text">
+                                                            Гамбургер мини -----------------------------  220 ₽
+                                                        </div>
+                                                </div>
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>    
             </div>
 </body>
 </html>
